--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="home-img-txt pos-abt">
                 <p><h1>Jedi Store </h1> </p>
                 <p class="padd-md">Feel the force with our collection of toys, action figures, costumes & more.</p>
-                <button class="btn shop-btn " >Shop Now </button>
+                <a href="./screens/html/product-list.html"><button class="btn shop-btn " >Shop Now </button></a>
             </div>
         </div>
 
