modified : as suggested in pr

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <a class="nav-list-link" href="#"><i class="far fa-heart nav-link-icon"></i></a>
                 </li>
                 <li class="nav-list-item">
-                  <a class="nav-list-link icon-badge pos-rel " href="#"><i class="fas fa-cart-plus nav-link-icon"></i><div class="badge-number flex-center badge-on-icon pos-abt">4</div></a>
+                  <a class="nav-list-link " href="#"><i class="fas fa-cart-plus nav-link-icon"></i></a>
                 </li>
              
               </ul>
