--- a/screens/html/product-list.html
+++ b/screens/html/product-list.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://dreamy-wright-6bb3af.netlify.app/components/components.css">
 
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>Jedi | Products</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                   <a class="nav-list-link" href="#"><i class="far fa-heart nav-link-icon"></i></a>
                 </li>
                 <li class="nav-list-item">
-                  <a class="nav-list-link icon-badge pos-rel " href="#"><i class="fas fa-cart-plus nav-link-icon"></i><div class="badge-number flex-center badge-on-icon pos-abt">4</div></a>
+                  <a class="nav-list-link  " href="#"><i class="fas fa-cart-plus nav-link-icon"></i></a>
                 </li>
              
               </ul>
@@ -98,16 +98,24 @@
                     </div>
                     <p class="filter-head padd-md" >Price</p>
                 <input class="filter-slider" type="range" min="1" max="100" value="50">
+                <div class="flex-space-btw slider-range" >
+                <p>0</p>
+                <p>5000</p>
+                <p>10000</p>
+                </div>
             </div>
         </aside>
 
 
-        <div class="main-content-product">
+        <div class="main-content-product" >
 
             <div>
-                <div class="card">
+                <div class="card card-pos-rel">
                     <img class="card-img" src="/assets/suit 1.jpg"
                         alt="Lago di Braies">
+
+                        <button class="dismiss card-icon" ><i class="fas fa-heart"></i></button>
+
                     <div class="card-details">
                         <span class="card-tag">Mens</span>
                         <span class="card-tag">Cloak</span>
@@ -160,9 +168,10 @@
                 </div>
             </div>
             <div>
-                <div class="card">
+                <div class="card card-pos-rel">
                     <img class="card-img" src="/assets/suit 1.jpg"
                         alt="Lago di Braies">
+                        <button class="dismiss card-icon" ><i class="fas fa-heart"></i></button>
                     <div class="card-details">
                         <span class="card-tag">Mens</span>
                         <span class="card-tag">Cloak</span>
