minor fix : added link into homepage header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </a>
               <ul class="nav-list">
                 <li class="nav-list-item">
-                  <a class="nav-list-link" href="#"><i class="far fa-heart nav-link-icon"></i></a>
+                  <a class="nav-list-link icon-badge pos-rel" href="./screens/html/wishlist.html"><i class="far fa-heart nav-link-icon"></i><div style=" background-color: var(--text-color);" class="badge-number flex-center badge-on-icon pos-abt">3</div></a>
                 </li>
                 <li class="nav-list-item">
                   <a class="nav-list-link " href="#"><i class="fas fa-cart-plus nav-link-icon"></i></a>
