Feat : Added cart-page
added cart page and done some minor changes in header links and footer

--- a/screens/html/product-list.html
+++ b/screens/html/product-list.html
@@ -23,22 +23,26 @@
 
     <header>
         <nav class="navbar flex-space-btw wd-100">
-            <div class="nav-logo"><i class="fas fa-jedi nav-logo-icon"></i> <span class="nav-logo-txt">Jedi Store</span>
-            </div>
+            <a href="/index.html">
+                <div class="nav-logo"><i class="fas fa-jedi nav-logo-icon"></i> <span class="nav-logo-txt">Jedi Store</span>
+                </div>
+            </a>
+            
+
             <div class="navbar-search">
               <button class="search-btn"><i class="fas fa-search"></i></button>
               <input class="search-input" type="text" name="search" placeholder="Search Here....">
             </div>
             <div class="navbar-links flex-center">
-              <a class="nav-login-link" href="./screens/html/login.html">
+              <a class="nav-login-link" href="./login.html">
                 <button class="nav-login-btn">Login</button>
               </a>
               <ul class="nav-list">
                 <li class="nav-list-item">
-                  <a class="nav-list-link" href="#"><i class="far fa-heart nav-link-icon"></i></a>
+                  <a class="nav-list-link icon-badge pos-rel" href="./wishlist.html"><i class="far fa-heart nav-link-icon"></i><div  class="badge-number flex-center header-badge-color badge-on-icon pos-abt">3</div></a>
                 </li>
                 <li class="nav-list-item">
-                  <a class="nav-list-link  " href="#"><i class="fas fa-cart-plus nav-link-icon"></i></a>
+                  <a class="nav-list-link icon-badge pos-rel" href="./cart.html"><i class="fas fa-cart-plus nav-link-icon"></i><div class="badge-number flex-center header-badge-color badge-on-icon pos-abt">3</div></a>
                 </li>
              
               </ul>
@@ -285,10 +289,10 @@
 
         <div class="home-footer flex-center flex-col">
             <div class="social-link padd-top-sm">
-                <a href="#"><div class="avatar-sm avatar-round flex-center footer-avatar "><i class=" fas fa-jedi " ></i></div>
+                <a href="#"><div class="avatar-sm avatar-round flex-center footer-avatar "><i class="fab fa-twitter"></i></i></div>
                 </a>
-                <a href="#"> <div class="avatar-sm avatar-round flex-center footer-avatar" ><i class=" fas fa-jedi " ></i></div></a>
-                <a href="#"> <div class="avatar-sm avatar-round flex-center footer-avatar" ><i class=" fas fa-jedi " ></i></div></a>
+                <a href="#"> <div class="avatar-sm avatar-round flex-center footer-avatar" ><i class="fab fa-github"></i></div></a>
+                <a href="#"> <div class="avatar-sm avatar-round flex-center footer-avatar" ><i class="fab fa-instagram"></i></div></a>
             </div>
             <ul class="padd-top-sm" >
                 <li class="list-inline"><a href="#">Home</a></li>
