--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
 
 
-        <div class="home-img-div pos-rel">
+        <div class="home-img-div pos-rel bx-shadow">
             <img class="wd-100 height-100" src="./assets/banner-star-wars-bg.jpg" alt=""/>
             <div class="home-img-txt pos-abt">
                 <p><h1>Jedi Store </h1> </p>
